clippath fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,7 +138,7 @@ body {
 		width: 100vw;
 		transform-origin: 50% 50%;
 		background: url(../../public//images//57695504619.png) 50% 50% no-repeat;
-		background-size: 100%;
+		background-size: 300%;
 	}
 }
 
